[gd_scene load_steps=4 format=3 uid="uid://btx0ia2h1afba"]

[ext_resource type="Script" uid="uid://ld05bd3bqvsi" path="res://inventory/inventory_slot.gd" id="1_refl1"]
[ext_resource type="Texture2D" uid="uid://cydef34hpfjv5" path="res://items/item.png" id="2_nsnbm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nsnbm"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(37.5, 37.5)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -282.5
offset_bottom = -202.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_refl1")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0955092, 0.103579, 0.0855207, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -15.5
offset_right = 15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.450648, 0.450648, 0.450648, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(15, 16)
scale = Vector2(0.008, 0.008)
texture = ExtResource("2_nsnbm")

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 7.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "1"

[node name="Details" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DetailsPanel" type="ColorRect" parent="Details"]
layout_mode = 0
offset_top = -33.75
offset_right = 60.0
offset_bottom = -1.25
color = Color(0.309531, 0.346589, 0.318986, 1)

[node name="ItemName" type="Label" parent="Details/DetailsPanel"]
layout_mode = 1
offset_left = 2.0
offset_right = 26.0
offset_bottom = 12.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 8
text = "Name"

[node name="ItemType" type="Label" parent="Details/DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -6.0
offset_right = 21.0
offset_bottom = 6.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_font_sizes/font_size = 8
text = "Type"

[node name="ItemEffect" type="Label" parent="Details/DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -12.0
offset_right = 24.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_font_sizes/font_size = 8
text = "Effect"

[node name="Usage" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UsagePanel" type="ColorRect" parent="Usage"]
layout_mode = 0
offset_top = -33.75
offset_right = 60.0
offset_bottom = -1.25
color = Color(0.309531, 0.346589, 0.318986, 1)

[node name="UseButton" type="Button" parent="Usage/UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 7.75
offset_right = -1.0
offset_bottom = 27.75
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Use"

[node name="DropButton" type="Button" parent="Usage/UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 0.5
offset_top = -24.75
offset_right = 28.5
offset_bottom = -4.75
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "Drop"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nsnbm")

[connection signal="pressed" from="Usage/UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
